Split html/css/js

--- a/public/index.html
+++ b/public/index.html
@@ -1,263 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang=en>
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Archive. Collection of downloadable files for the toom.io project platform.">
-	<meta name="keywords" content="status, uptime, toom">
-	<meta name="robots" content="index,follow">
+	<meta name=viewport content="width=device-width, initial-scale=1">
+	<meta name=description content="Archive. Collection of downloadable files for the toom.io project platform.">
+	<meta name=keywords content="archive, download, files, toom">
 	<title>Archive - toom.io</title>
 	<link rel="shortcut icon" href="/favicon.ico" />
-	<style>
-		@font-face {
-			font-family: "icons";
-			src: url("/font.woff") format("woff");
-		}
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		html {
-			background-color: white;
-			color: black;
-			font-family: sans-serif;
-			overflow-y: scroll;
-			white-space: nowrap;
-		}
-		body {
-			min-width: 250px;
-			max-width: 980px;
-			margin: 0 auto;
-		}
-		p      { margin: 3px 0; }
-		main   { clear: both; }
-		footer { text-align: center; }
-		header {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			white-space: nowrap;
-			margin: 1em 1em;
-		}
-		#path {
-			list-style-type: none;
-			display:flex;
-			align-items: center;
-			overflow: hidden;
-		}
-		#path li {
-			overflow: hidden;
-			text-overflow: ellipsis;
-			font-size: 70%;
-		}
-		#path li + li:before {
-			content: "/";
-			margin: 0 0.3em;
-			font-weight: initial;
-		}
-		#path li:first-child { flex-shrink: 0; }
-		#path li:last-child {
-			flex-shrink: 0;
-			font-weight: bold;
-			font-size: 100%;
-			margin-right: 0.3em;
-		}
-		#path span {
-			font-family: monospace;
-			font-size: 130%;
-			background-color: #eee9;
-		}
-		#search > * {
-			line-height: 2em;
-			padding: 6px;
-		}
-		#search input {
-			width: 4em;
-			color: #9999;
-			border: 1px solid #eee9;
-			text-overflow: ellipsis;
-			transition: width 0.1s;
-		}
-		#search input:focus {
-			color: black;
-			width: 21em;
-		}
-		#search button {
-			min-width: 2.5em;
-			cursor: pointer;
-			background-color: #eee9;
-			border: 1px solid #eee9;
-		}
-		#search button span {
-			display: inline-block;
-			font-family: icons;
-			transform: scale(1.5,1.5);
-		}
-		#files {
-			list-style-type: none;
-			margin: 0 1em 2em;
-			padding: 1px;
-			border: 1px solid #888;
-			border-radius: 10px;
-			overflow-x: auto;
-			transition: opacity 0.1s;
-		}
-		#files li                 { padding: 5px 15px; }
-		#files li:nth-child(even) { background-color: #eee9; }
-		#files li:last-child      { border-radius: 0 0 10px 10px; }
-		#files li a               { font-family: monospace; }
-		.u:before { content: "⬆️"; }
-		.d:before { content: "📁"; }
-		.f:before { content: "📄"; }
-		.u:before, .d:before, .f:before {
-			font-family: icons;
-			display: inline-block;
-			padding: 0 7px 0 0;
-			min-width: 1.2em;
-			text-align: center;
-			text-decoration: none;
-			color: black;
-		}
-		.error {
-			color: red;
-			font-weight: bold;
-			text-align: center;
-		}
-		.loading #path:after {
-			content: " ";
-			display: inline-block;
-			border-radius: 50%;
-			background-color: black;
-			width: 0.7em;
-			height: 0.7em;
-			animation:blink normal 1s infinite ease-in-out;
-		}
-		.loading #files { opacity: 0.3; }
-		@keyframes blink {
-			0%, 100% { transform: scale(0.3); opacity: 0.0; }
-			50%      { transform: scale(1.0); opacity: 1.0; }
-		}
-	</style>
-	<script>
-		const search = RegExp("[?&]q=([^&]+)");
-		function setPath(crumbs, files, q, path, query) {
-			if (document.location.pathname != path || document.location.search != query) {
-				history.pushState({}, document.title, path + query);
-				path = document.location.pathname;
-			}
-
-			document.body.classList.add("loading");
-			window.scrollTo(0, 0);
-
-			function a(sp, href, text, cls, rel) {
-				let r = document.createElement("a");
-				r.appendChild(document.createTextNode(text));
-				r.setAttribute("href", href);
-				if (rel) r.setAttribute("rel", rel);
-				if (cls) r.classList.add(cls);
-				if (sp)	r.addEventListener( 'click', function(e){
-					e.preventDefault();
-					setPath(crumbs, files, q, href, "");
-				 });
-				return r;
-			}
-			function el(e, c) {
-				let r = document.createElement(e);
-				r.appendChild(c);
-				return r;
-			}
-
-			path = path.replace(/\/\/+/g, "/").replace(/(^\/+)|(\/+$)/g, "")
-			const p = (path)?path.split("/"):[];
-			let s = search.exec(query)
-			let f = document.createDocumentFragment();
-			f.appendChild(el("li", a(true, "/", document.location.hostname)));
-			let h = "/"
-			for (let i = 0; i < p.length - (!s); i++) {
-				h += p[i];
-				f.appendChild(el("li", a(true, h, decodeURIComponent(p[i]))));
-				h += "/";
-			}
-
-			if (s) {
-				s = decodeURIComponent(s[1]);
-				q.value = s;
-				f.appendChild(el("li", el("span", document.createTextNode(s))));
-			} else {
-				q.value = "";
-				f.appendChild(el("li", document.createTextNode(decodeURIComponent(p[p.length-1]||""))));
-			}
-			crumbs.innerHTML = "";
-			crumbs.appendChild(f);
-
-			const req = new XMLHttpRequest();
-			req.onreadystatechange = function() {
-				if (this.readyState != 4) return;
-				document.body.classList.remove("loading");
-
-				if (this.status != 200) {
-					files.innerHTML="<li class=error>"+((this.status == 404)?"Not found":"Load failed")+"</li>";
-					return;
-				}
-
-				let f = document.createDocumentFragment();
-				if (p[0] && !s) f.appendChild(el("li", a(true, "/"+p.slice(0,-1).join("/"), "..", "u")));
-
-				const json = JSON.parse(this.responseText || "[]");
-				for (let i = 0; i < json.length; i++) {
-					const n = json[i].name
-					const p = path+encodeURI(json[i].name);
-					if ((json[i].type||"")[0] == "f")
-						f.appendChild(el("li", a(false, "/dl/"+p, n, "f", "nofollow")));
-					else
-						f.appendChild(el("li", a(true, "/"+p, n, "d", "")));
-				}
-
-				if (f.childNodes.length) {
-					files.innerHTML = "";
-					files.appendChild(f);
-				} else {
-					files.innerHTML="<li class=error>No files found</li>";
-				}
-			};
-
-			if (path) path += "/"
-			req.open("GET", "/idx/" + path + query, true);
-			req.send();
-		}
-
-		document.addEventListener("DOMContentLoaded", function() {
-			const path   = document.getElementById("path");
-			const files  = document.getElementById("files");
-			const search = document.getElementById("search");
-			const q      = document.getElementById("q");
-			setPath(path, files, q, document.location.pathname, document.location.search);
-
-			window.addEventListener("popstate", function(e) {
-				setPath(path, files, q, document.location.pathname, document.location.search);
-			});
-
-			search.addEventListener("submit", function(e) {
-				e.preventDefault();
-				const s = q.value ? "?r=1&q=" + encodeURIComponent(q.value) : "";
-				setPath(path, files, q, document.location.pathname, s);
-			});
-		});
-	</script>
+	<link rel="stylesheet" type="text/css" href="/style.css">
+	<script src="/script.js"></script>
 </head>
 <body class=loading>
 	<header>
 		<ul id=path><li><a href=/>Archive</a></li></ul>
-		<form id=search>
-			<input type=text placeholder="Search.." id=q name=q><button type=submit><span>🔎</span></button>
-		</form>
+		<form id=search><input type=text placeholder="Search.." id=q name=q><button type=submit><span>🔎</span></button></form>
 	</header>
-	<main>
-		<ul id=files></ul>
-	</main>
-	<footer>
-		<a href="https://www.toom.io">toom.io</a>
-	</footer>
+	<main><ul id=files></ul></main>
+	<footer><a href="https://www.toom.io">toom.io</a></footer>
 </body>
 </html>
