--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class=loading>
 	<header>
-		<ul id=path><li><a href=/>Archive</a></li></ul>
+		<ul id=path><li><a href="/">Archive</a></li></ul>
 		<form id=search><input type=text placeholder="Search.." id=q name=q><button type=submit><span>🔎</span></button></form>
 	</header>
 	<main><ul id=files></ul></main>
