Add cache tag to assets

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 	<meta name=description content="Archive. Collection of downloadable files for the toom.io project platform.">
 	<meta name=keywords content="archive, download, files, toom">
 	<title>Archive - toom.io</title>
-	<link rel="shortcut icon" href="/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="/style.css">
-	<script src="/script.js"></script>
+	<link rel="shortcut icon" href="/favicon.ico?201809121" />
+	<link rel="stylesheet" type="text/css" href="/style.css?201809121">
+	<script src="/script.js?201809121"></script>
 </head>
 <body class=loading>
 	<header>
