Replace underscore with space to trick search engines into indexing

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,15 @@
 	<meta name=keywords content="archive, download, files, toom">
 	<title>Archive - toom.io</title>
 	<link rel="shortcut icon" href="/favicon.ico?201809121" />
-	<link rel="stylesheet" type="text/css" href="/style.css?201809121">
-	<script src="/script.js?201809121"></script>
+	<link rel="stylesheet" type="text/css" href="/style.css?201809141">
+	<script src="/script.js?201809141"></script>
 </head>
 <body class=loading>
 	<header>
-		<ul id=path><li><a href="/">Archive</a></li></ul>
+		<ul id=path><li><a href="/">archive.toom.io</a></li><li></li></ul>
 		<form id=search><input type=text placeholder="Search.." id=q name=q><button type=submit><span>🔎</span></button></form>
 	</header>
-	<main><ul id=files></ul></main>
+	<main><ul id=files><li><a href="/" class="u">..</a></li></ul></main>
 	<footer><a href="https://www.toom.io">toom.io</a></footer>
 </body>
 </html>
