Asynchronous js loading

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<title>Archive - toom.io</title>
 	<link rel="shortcut icon" href="/favicon.ico?201809121" />
 	<link rel="stylesheet" type="text/css" href="/style.css?201809141">
-	<script src="/script.js?201809141"></script>
+	<script src="/script.js?201809161" async></script>
 </head>
 <body class=loading>
 	<header>
