Maintain folder structure for directory in search result

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
 	<meta name=description content="Archive. Collection of downloadable files for the toom.io project platform.">
 	<meta name=keywords content="archive, download, files, toom">
 	<title>Archive - toom.io</title>
-	<link rel="shortcut icon" href="/favicon.ico?201809121" />
+	<link rel="shortcut icon" href="/favicon.ico?201809121">
 	<link rel="stylesheet" type="text/css" href="/style.css?201809141">
-	<script src="/script.js?201901091" async></script>
+	<link rel="preload" href="/font.woff?201809121" as="font" type="font/woff" crossorigin>
+	<script src="/script.js?202010021" async></script>
 </head>
 <body class=loading>
 	<header>
